# thesis

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  THESIS_CONTEXT.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: baseline_crag.yaml  evaluator_crossencoder.yaml  evaluator_hybrid.yaml  evaluator_llm_judge.yaml
data/cache/: llm_judge_base.db  llm_judge_minimal.db  llm_judge_val_tuning.db  llm_judge_with_cot.db  llm_judge_with_negative_examples.db  llm_judge_with_strict_containment.db  mining_verification.db  wikipedia_passages.db
data/raw/: README.md
data/training/: cross_encoder_train.jsonl  cross_encoder_val.jsonl
data/training_v2/: cross_encoder_train.jsonl  cross_encoder_val.jsonl
notebooks/: train_cross_encoder.ipynb
scripts/: aggregate_full_popqa.py  build_splits_v2.py  download_datasets.sh  eval_full_popqa.py  eval_llm_judge_prompts.py  eval_phase5.py  fetch_entity_passages.py  mine_entity_questions.py  mine_hard_cases.py  prepare_training_data.py  reemit_ranking_metrics.py  reproduce_baseline.py  train_cross_encoder.py  tune_hybrid.py
src/thesis_crag/: __init__.py
src/thesis_crag/data/: hard_case_miner.py  loaders.py
src/thesis_crag/evaluators/: base.py  cross_encoder.py  hybrid.py  llm_judge.py  t5_baseline.py
src/thesis_crag/metrics/: retrieval.py
src/thesis_crag/prompts/: answer_containment.txt  llm_judge.txt  llm_judge_variants.py
src/thesis_crag/utils/: llm_clients.py  logging.py
tests/: test_cross_encoder.py  test_evaluators.py  test_hybrid.py  test_llm_judge.py  test_metrics.py
