[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-crag"
version = "0.1.0"
description = "Improving the CRAG retrieval evaluator: beyond the similarity trap"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3,<2.5",
    "transformers>=4.44,<4.50",
    "sentence-transformers>=3.0,<4.0",
    "datasets>=2.20,<3.0",
    "accelerate>=0.33",
    "rank-bm25>=0.2.2",
    "pydantic>=2.7,<3.0",
    "tenacity>=8.5",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "wandb>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Long lines in prompt strings and markdown table headers cannot be wrapped
"src/thesis_crag/prompts/llm_judge_variants.py" = ["E501"]
# Markdown table headers and formatted print statements in reporting scripts
"scripts/eval_llm_judge_prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["transformers.*", "sentence_transformers.*"]
ignore_missing_imports = true
